--- a/split_sudoku.ipynb
+++ b/split_sudoku.ipynb
@@ -33,6 +33,7 @@
    "outputs": [],
    "source": [
     "from sudokudetector.Sudoku import Sudoku\n",
+    "from sudokudetector.image import render, debug\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import os\n",
@@ -40,6 +41,7 @@
     "\n",
     "%matplotlib inline\n",
     "\n",
+    "\"\"\"get file name\"\"\"\n",
     "ims_name = list(filter(lambda x: '.jpg' in x, os.listdir('dataset')))\n",
     "# for iname in ims_name:\n",
     "#     try:\n",
@@ -48,6 +50,7 @@
     "#         print(iname)\n",
     "#         print(e)\n",
     "\n",
+    "\"\"\"define object class\"\"\"\n",
     "sudoku = Sudoku('dataset/image202.jpg')\n"
    ]
   },
@@ -69,12 +72,16 @@
     }
    ],
    "source": [
-    "fig=plt.figure(figsize=(9, 9))\n",
-    "for x in range(9):\n",
-    "    for y in range(9):\n",
-    "        fig.add_subplot(9, 9, y+(9*x) + 1)\n",
-    "        plt.imshow(sudoku.cells[x, y], cmap='gray')\n",
-    "plt.show()"
+    "\"\"\"inside render function\"\"\"\n",
+    "# fig=plt.figure(figsize=(9, 9))\n",
+    "# for x in range(9):\n",
+    "#     for y in range(9):\n",
+    "#         index = x * 9+y+1\n",
+    "#         fig.add_subplot(9, 9, index)\n",
+    "#         plt.imshow(sudoku.cells[x, y], cmap='gray')\n",
+    "# plt.show()\n",
+    "\n",
+    "render(sudoku.cells, (9, 9))"
    ]
   }
  ]
